fix tab wrapping and installation tab

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -63,3 +63,12 @@
   transform: scale(1.1);
   transition: 0.1s ease-in-out;
 }
+
+/**
+* these customizations are to get the quickstart tabs to overflow properly,
+* so if you change this please go check that page
+**/
+.tabs {
+  overflow-x: visible; /** overide to default */
+  flex-wrap: wrap; /** adding this to wrap the tabs instead of a scroll bar */
+}
